# qname

./: .clang-format  AUTHORS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  hex_endec.cpp  name.cpp  namespace.cpp
include/: quicr_name
include/quicr/: _utilities.h  hex_endec.h  name.h  namespace.h
src/: CMakeLists.txt  name.cpp  quicr_name.cpp  quicr_namespace.cpp
test/: CMakeLists.txt  hex_endec.cpp  name.cpp  namespace.cpp
